--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,12 @@ on:
 
 jobs:
   check:
-    name: Run checks
+    name: Check commits and formatting
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
 
     steps:
       - name: Checkout
@@ -23,12 +23,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use PNPM
+      - name: Set up PNPM
         uses: pnpm/action-setup@v2
         with:
           version: 8
 
-      - name: Use Node ${{ matrix.node-version }}
+      - name: Set up Node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -45,23 +45,23 @@ jobs:
         run: pnpm prettier:check
 
   build-and-test:
-    name: Build and Test with Node ${{ matrix.node-version }}
+    name: Build and Test
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x, 20.x]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use PNPM
+      - name: Set up PNPM
         uses: pnpm/action-setup@v2
         with:
           version: 8
 
-      - name: Use Node ${{ matrix.node-version }}
+      - name: Set up Node ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
