--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,25 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "noUncheckedIndexedAccess": true
-  }
+    "noUncheckedIndexedAccess": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.cjs",
+    "**/*.mjs",
+    "**/*.ts",
+    "**/*.tsx",
+    ".eslintrc.cjs",
+    ".prettierrc.cjs",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": ["node_modules"]
 }
